Added prototype generation config system